# cli-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.darwin  Dockerfile.linux  LICENSE  README.md  build.rs  p2p-socket.md  publish.sh
crates/p2p-control/: Cargo.toml
crates/p2p-control/src/: control.rs  events.rs  lib.rs  transport.rs
crates/socketio/: Cargo.toml
crates/socketio/src/: client.rs  lib.rs  proto.rs  transport.rs
crates/turn/: Cargo.toml
crates/turn/src/: allocate.rs  attr.rs  auth.rs  indication.rs  lib.rs  message.rs
crates/turn/tests/: rfc5769.rs
docs/: p2p-retry-flow.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/nullseal/: README.md  package.json
src/: api.rs  crypto.rs  local.rs  local_server.rs  local_signal.rs  main.rs  retry.rs  socket.rs  webrtc.rs
src/commands/: check.rs  display.rs  get.rs  log.rs  manage.rs  mod.rs  p2p_stages.rs  share.rs
src/p2p/: codec.rs  connection.rs  mod.rs  receiver_adapter.rs  receiver_engine.rs  sender_adapter.rs  sender_engine.rs
src/webrtc/: event_loop.rs  mod.rs  net.rs  receiver.rs  sender.rs  turn.rs
