[package]
name = "nullseal-p2p-control"
version = "0.1.0"
edition = "2021"
description = "Transport-agnostic P2P control-plane for NullSeal signaling (layer B)"

[dependencies]
nullseal-socketio = { path = "../socketio" }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
