[package]
name = "nullseal-socketio"
version = "0.1.0"
edition = "2021"
description = "Transport-agnostic Socket.IO v4 client (Engine.IO + namespace connect + event framing)"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde_json = "1"
url = "2"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
